Módy už fungují, přidán dialog při pravém kliknuti myši a okno pro přidání atributu

--- a/build.xml
+++ b/build.xml
@@ -40,7 +40,7 @@
             <zipgroupfileset dir="lib" includes="**/*.jar"/>
             <fileset dir="data">
                 <include name="Main.fxml"/>
-                <include name="Box.fxml"/>
+                <include name="addAttributeWindow.fxml"/>
                 <include name="application.css"/>
             </fileset>
         </jar>
