Změna scén, úprava mouse módu po načtení ze souboru

--- a/build.xml
+++ b/build.xml
@@ -47,6 +47,7 @@
             <zipgroupfileset dir="lib" includes="**/*.jar"/>
             <fileset dir="data">
                 <include name="Main.fxml"/>
+                <include name="Sequence.fxml"/>
                 <include name="addAttributeWindow.fxml"/>
                 <include name="application.css"/>
             </fileset>
