Přidána šipka (kinda)

--- a/build.xml
+++ b/build.xml
@@ -50,6 +50,7 @@
                 <include name="Sequence.fxml"/>
                 <include name="addAttributeWindow.fxml"/>
                 <include name="application.css"/>
+                <include name="images/**"/>
             </fileset>
         </jar>
     </target>
